--- a/henry_analytics/eda_accesibilidad_tech.ipynb
+++ b/henry_analytics/eda_accesibilidad_tech.ipynb
@@ -185,9 +185,9 @@
    "metadata": {},
    "source": [
     "## Observaciones: \n",
-    "        * La accesibilidad respecto a la adquisicion de internet en el hogar aumento gradualmente conforme pasaban los años.\n",
+    "* La accesibilidad respecto a la adquisicion de internet en el hogar aumento gradualmente conforme pasaban los años.\n",
     "\n",
-    "        * De la misma manera, vemos como por cada 100 habitantes, el acceso de este servicio fue aumentando."
+    "* De la misma manera, vemos como por cada 100 habitantes, el acceso de este servicio fue aumentando."
    ]
   },
   {
@@ -196,7 +196,7 @@
    "source": [
     "## Outliers\n",
     "\n",
-    "Analicemos si encontramos Outliers tanto para los hogares como habitantes. A primera vista puede que no encontremos valores que se encuentren por fuera de lo normal debido a la continuidad dentro de nuestros datos"
+    "    Analicemos si encontramos Outliers tanto para los hogares como habitantes. A primera vista puede que no encontremos valores que se encuentren por fuera de lo normal debido a la continuidad dentro de nuestros datos"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "metadata": {},
    "source": [
     "## Observaciones:\n",
-    "        * Como habiamos predicho, no hay valores de outliers debido a la uniformidad de los valores en nuestra base de datos"
+    "* Como habiamos predicho, no hay valores de outliers debido a la uniformidad de los valores en nuestra base de datos"
    ]
   },
   {
@@ -403,8 +403,22 @@
    "source": [
     "## Observaciones:\n",
     "\n",
-    "        * "
+    "* Entre el año 2014 y 2022 hubo un incremento del 51.41% en hogares que adquirieron el servicio de internet en toda argentina.\n",
+    "\n",
+    "* En este mismo periodo, mas personas de manera individual adquirieron el servicio aumentando asi su accesibilidad a un 55.45%\n",
+    "\n",
+    "* Graficamente podemos notar un salto desde el 2020 en ambos sectores demograficos, esto se debe al inicio de la pandemia Covid-19. Claramente las personas, al encontrarse encerradas obtaron  por usar mas internet. Este aumento, considerando años anteriores, es de un 7.64% para hogares y 7.99% para habitantes.\n",
+    "\n",
+    "Hay que tener en cuenta que estos ultimos porcentajes representan:\n",
+    "* 7.64% = 1.3 Millones de hogares argentinos censados en 2021\n",
+    "\n",
+    "* 7.99% = 3.65 millones de habitantes argentinos censados en 2021"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
