--- a/henry_analytics/etl.ipynb
+++ b/henry_analytics/etl.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,8 @@
      "text": [
       "Carga completa del dataset: Internet_Penetracion.csv\n",
       "Caracteres cambiados en columnas: ['Accesos por cada 100 hogares', 'Accesos por cada 100 hab']\n",
-      "Cambio format a float en columnas: ['Accesos por cada 100 hogares', 'Accesos por cada 100 hab']\n"
+      "Cambio format a float en columnas: ['Accesos por cada 100 hogares', 'Accesos por cada 100 hab']\n",
+      "Datos vacios eliminados\n"
      ]
     }
    ],
@@ -144,7 +145,11 @@
     "#Casting str a float\n",
     "inter_hogar[\"Accesos por cada 100 hogares\"] = inter_hogar[\"Accesos por cada 100 hogares\"].apply(cambio_a_float)\n",
     "inter_hogar[\"Accesos por cada 100 hab\"] = inter_hogar[\"Accesos por cada 100 hab\"].apply(cambio_a_float)\n",
-    "print(f\"Cambio format a float en columnas: {col_trabajar}\")"
+    "print(f\"Cambio format a float en columnas: {col_trabajar}\")\n",
+    "\n",
+    "#Borrado de datos null\n",
+    "inter_hogar.dropna(inplace=True)\n",
+    "print(\"Datos vacios eliminados\")"
    ]
   },
   {
@@ -156,14 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Columna: Total modificada\n"
+      "Columna: Total modificada\n",
+      "Datos vacios eliminados\n"
      ]
     }
    ],
@@ -171,112 +177,21 @@
     "#Carga del dataset\n",
     "inter_tech = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_BAF.csv\",sep=\",\")\n",
     "\n",
-    "#Eliminacion de la col \"total\" y adicion de una nueva\n",
+    "#Modificacion de la col \"total\"\n",
     "inter_tech.drop(columns=\"Total\", inplace=True)\n",
     "inter_tech[\"total\"] = inter_tech[\"Banda ancha fija\"] + inter_tech[\"Dial up\"]\n",
-    "print(\"Columna: Total modificada\")\n"
+    "print(\"Columna: Total modificada\")\n",
+    "\n",
+    "#Borrado de datos null\n",
+    "inter_tech.dropna(inplace=True)\n",
+    "print(\"Datos vacios eliminados\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Año</th>\n",
-       "      <th>Trimestre</th>\n",
-       "      <th>Provincia</th>\n",
-       "      <th>Banda ancha fija</th>\n",
-       "      <th>Dial up</th>\n",
-       "      <th>total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Buenos Aires</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>11.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Capital Federal</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Catamarca</td>\n",
-       "      <td>71</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>72.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chaco</td>\n",
-       "      <td>144</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>149.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chubut</td>\n",
-       "      <td>168</td>\n",
-       "      <td>904.0</td>\n",
-       "      <td>1072.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Año  Trimestre        Provincia  Banda ancha fija  Dial up   total\n",
-       "0  2022          4     Buenos Aires                 5      6.0    11.0\n",
-       "1  2022          4  Capital Federal                 2      2.0     4.0\n",
-       "2  2022          4        Catamarca                71      1.0    72.0\n",
-       "3  2022          4            Chaco               144      5.0   149.0\n",
-       "4  2022          4           Chubut               168    904.0  1072.0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "inter_tech.head()"
+    "## 3.1.3 ETL para el Dataset: \"Internet_Accesos-por-conectividad.csv\""
    ]
   },
   {
@@ -285,24 +200,43 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Año                 0\n",
-       "Trimestre           0\n",
-       "Provincia           0\n",
-       "Banda ancha fija    0\n",
-       "Dial up             2\n",
-       "Total               0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cambio a Format int en columnas: ['Año', 'Trimestre']\n",
+      "Columna: Total Modificada\n",
+      "Datos vacios eliminados\n"
+     ]
     }
    ],
    "source": [
-    "inter_tech.isnull().sum()"
+    "#Carga del dataset\n",
+    "inter_acess = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Accesos-por-conectividad.csv\",sep=\",\")\n",
+    "\n",
+    "#Casting a Int a diferentes columnas\n",
+    "\n",
+    "col_trabajar = [\"Año\", \"Trimestre\"]\n",
+    "inter_acess[\"Año\"] = inter_acess[\"Año\"].apply(cambio_a_float).astype(int)\n",
+    "inter_acess[\"Trimestre\"] = inter_acess[\"Trimestre\"].apply(cambio_a_float).astype(int)\n",
+    "print(f\"Cambio a Format int en columnas: {col_trabajar}\")\n",
+    "\n",
+    "#Modificacion columna \"Total\"\n",
+    "inter_acess.drop(columns=\"Total\",inplace=True)\n",
+    "inter_acess[\"Total\"] = inter_acess[\"ADSL\"] + inter_acess[\"Cablemodem\"] + inter_acess[\"Fibra óptica\"] + inter_acess[\"Wireless\"]+ inter_acess[\"Otros\"]\n",
+    "print(f\"Columna: Total Modificada\")\n",
+    "\n",
+    "#Borrado de datos null\n",
+    "inter_acess.dropna(inplace=True)\n",
+    "print(\"Datos vacios eliminados\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Revision Tipo de Datos\n",
+    "\n",
+    "Con la funcion definida anterior como \"diccionario_tipos_datos(dataframe_file)\" revisamos los tipos de datos que tienen cada una de las columnas dentro de nuestras bases de datos.\n"
    ]
   },
   {
@@ -313,15 +247,39 @@
     {
      "data": {
       "text/plain": [
-       "{'Año': {\"<class 'int'>\": 864},\n",
-       " 'Trimestre': {\"<class 'int'>\": 864},\n",
-       " 'Provincia': {\"<class 'str'>\": 864},\n",
-       " 'Banda ancha fija': {\"<class 'int'>\": 864},\n",
-       " 'Dial up': {\"<class 'float'>\": 864},\n",
-       " 'Total': {\"<class 'int'>\": 864}}"
+       "{'Año': {\"<class 'int'>\": 36},\n",
+       " 'Trimestre': {\"<class 'int'>\": 36},\n",
+       " 'Accesos por cada 100 hogares': {\"<class 'float'>\": 36},\n",
+       " 'Accesos por cada 100 hab': {\"<class 'float'>\": 36},\n",
+       " 'Periodo': {\"<class 'str'>\": 36}}"
       ]
      },
      "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diccionario_tipos_datos(inter_hogar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Año': {\"<class 'int'>\": 862},\n",
+       " 'Trimestre': {\"<class 'int'>\": 862},\n",
+       " 'Provincia': {\"<class 'str'>\": 862},\n",
+       " 'Banda ancha fija': {\"<class 'int'>\": 862},\n",
+       " 'Dial up': {\"<class 'float'>\": 862},\n",
+       " 'total': {\"<class 'float'>\": 862}}"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,21 +290,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Año': {\"<class 'int'>\": 864},\n",
+       " 'Trimestre': {\"<class 'int'>\": 864},\n",
+       " 'Provincia': {\"<class 'str'>\": 864},\n",
+       " 'ADSL': {\"<class 'float'>\": 864},\n",
+       " 'Cablemodem': {\"<class 'float'>\": 864},\n",
+       " 'Fibra óptica': {\"<class 'float'>\": 864},\n",
+       " 'Wireless': {\"<class 'float'>\": 864},\n",
+       " 'Otros': {\"<class 'float'>\": 864},\n",
+       " 'Total': {\"<class 'float'>\": 864}}"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Carga del dataset\n",
+    "diccionario_tipos_datos(inter_acess)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Actualizacion de Datasets\n",
     "\n",
-    "inter_acess = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Accesos-por-conectividad.csv\",sep=\",\")\n"
+    "En esta seccion actualizaremos los datasets trabajados. Esto nos permitira tener los datos en los formatos adecuados y limpios."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset Actualizado: inter_hogar\n",
+      "Dataset Actualizado: inter_tech\n",
+      "Dataset Actualizado: inter_acess\n"
+     ]
+    }
+   ],
+   "source": [
+    "inter_hogar.to_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Penetracion.csv\", index=False)\n",
+    "print(\"Dataset Actualizado: inter_hogar\")\n",
+    "\n",
+    "inter_tech.to_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_BAF.csv\",index=False)\n",
+    "print(\"Dataset Actualizado: inter_tech\")\n",
+    "\n",
+    "inter_acess.to_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Accesos-por-conectividad.csv\",index=False)\n",
+    "print(\"Dataset Actualizado: inter_acess\")\n"
+   ]
   }
  ],
  "metadata": {
