--- a/henry_analytics/eda_conectividades_tech.ipynb
+++ b/henry_analytics/eda_conectividades_tech.ipynb
@@ -25,6 +25,7 @@
     "\n",
     "* \"data\\Internet_Accesos-por-tecnologia.csv\"\n",
     "* \"data\\Internet_BAF.csv\"\n",
+    "* \"data\\Homologacion_equipos.csv\"\n",
     "\n",
     "Esto nos permitira observar el tipo de redes y como se distribuyen entre las herramientas tecnologicas que permiten velocidades altas o bajas en el internet. De esta manera podremos tener una perspectiva mas centrada de los recursos disponibles para nuestro modelo de negocio. Este ejercicio solo pretender observar el desarrollo del uso del internet fijo o de hogar."
    ]
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,8 @@
     "\n",
     "#Carga del dataset\n",
     "inter_access = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_BAF.csv\",sep=\",\")\n",
-    "inter_tech = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Accesos-por-conectividad.csv\",sep=\",\")"
+    "inter_tech = pd.read_csv(\"C:\\\\Users\\\\andre\\\\Documents\\\\Py Codes\\\\data\\\\Internet_Accesos-por-conectividad.csv\",sep=\",\")\n",
+    "inter_mercado = pd.read_csv(\"C:\\\\Users\\\\andre\\Documents\\\\Py Codes\\\\data\\\\Homologacion_equipos.csv\")"
    ]
   },
   {
@@ -245,7 +247,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## 3.2 Homologacion Y Actualizacion de Equipos\n",
+    "\n",
+    "En este apartado analizaremos el dataset \"data\\Homologacion_equipos.csv\". La cual contiene datos de aquellas empresas que se han encargado de todo tipo de solicitudes desde revisiones o visitas tecnicas hasta la actualizacion de equipos. Nuestro interes sera en la competencia directa que pueda generar ciertas compañias de telecomunicaciones al tener un gran interes en modernizar su infraestructura como tambien de ofrecer un servicio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.2.1 Actualizacion\n",
+    "\n",
+    "En las siguientes celdas veremos la distribucion de actualizacion y cualquier otra metrica que nos competa para evaluar al mercado."
+   ]
   }
  ],
  "metadata": {
