--- a/henry_analytics/eda_conectividades_tech.ipynb
+++ b/henry_analytics/eda_conectividades_tech.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,11 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "#ignorar Warnings\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "\n",
     "sns.set() #Estandarizamos los diseños de la grafica\n",
     "sns.color_palette(\"husl\", 8)\n",
@@ -104,33 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_15176\\2737322675.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  puntos_acceso_2022[\"participacion_banda_ancha\"] = round((puntos_acceso_2022[\"Banda ancha fija\"]/puntos_acceso_2022[\"total\"])*100,2)\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_15176\\2737322675.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  puntos_acceso_2022[\"participacion_dial_up\"] =  100-puntos_acceso_2022[\"participacion_banda_ancha\"]\n",
-      "C:\\Users\\andre\\AppData\\Local\\Temp\\ipykernel_15176\\2737322675.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  puntos_acceso_2022.sort_values(by=\"participacion_banda_ancha\", inplace=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Dataframe que calcula los porcentajes de participacion de la conectividad entre provincias\n",
     "\n",
@@ -165,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -261,6 +242,203 @@
     "\n",
     "En las siguientes celdas veremos la distribucion de actualizacion y cualquier otra metrica que nos competa para evaluar al mercado."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Expediente</th>\n",
+       "      <th>Documento</th>\n",
+       "      <th>Solicitante</th>\n",
+       "      <th>Calle</th>\n",
+       "      <th>Nro</th>\n",
+       "      <th>Piso</th>\n",
+       "      <th>Dpto</th>\n",
+       "      <th>CPA</th>\n",
+       "      <th>Localidad</th>\n",
+       "      <th>Partido</th>\n",
+       "      <th>Provincia</th>\n",
+       "      <th>Tramite</th>\n",
+       "      <th>Actuacion</th>\n",
+       "      <th>F_Vencimiento</th>\n",
+       "      <th>Reg_Com</th>\n",
+       "      <th>Reg_Fab</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>EXPCNC E 4589/2001</td>\n",
+       "      <td>CUIT 30-69799813-2</td>\n",
+       "      <td>ASAHI ARGENTINA S.A.,</td>\n",
+       "      <td>TALCAHUANO</td>\n",
+       "      <td>750</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C1013AAP</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CAPITAL FEDERAL</td>\n",
+       "      <td>RENOVACION COMERCIALIZACION</td>\n",
+       "      <td>Disposición 1781 GI/2008</td>\n",
+       "      <td>23/05/2011</td>\n",
+       "      <td>30-1398</td>\n",
+       "      <td>-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EXPCNC E 9484/2000</td>\n",
+       "      <td>CUIT 30-61593482-4</td>\n",
+       "      <td>IGT GLOBAL SOLUTIONS CORPORATION,</td>\n",
+       "      <td>AVDA. CABILDO</td>\n",
+       "      <td>4566</td>\n",
+       "      <td>7°</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C1429ABQ</td>\n",
+       "      <td>CABA</td>\n",
+       "      <td>CABA</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>COMERCIALIZACION</td>\n",
+       "      <td>Resolución 85 ENACOM/2016</td>\n",
+       "      <td>22/02/2019</td>\n",
+       "      <td>30-2153</td>\n",
+       "      <td>-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EXPCNC E 15687/1998</td>\n",
+       "      <td>CUIT 30-69330140-4</td>\n",
+       "      <td>OMNISAT S.A.,</td>\n",
+       "      <td>BRASIL</td>\n",
+       "      <td>731</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1154</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>CABA</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>COMERCIALIZACION</td>\n",
+       "      <td>Disposición 217 GI/1999</td>\n",
+       "      <td>22/01/2002</td>\n",
+       "      <td>30-1336</td>\n",
+       "      <td>-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>EXPCNC E 9369/1999</td>\n",
+       "      <td>CUIT 30-70052972-6</td>\n",
+       "      <td>UBICAR S.R.L.,</td>\n",
+       "      <td>INDEPENDENCIA</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1225</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>CABA</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>COMERCIALIZACION</td>\n",
+       "      <td>Disposición 3765 GI/1999</td>\n",
+       "      <td>09/09/2002</td>\n",
+       "      <td>30-1350</td>\n",
+       "      <td>-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EXPCNC E 4684/1998</td>\n",
+       "      <td>CUIT 30-68831569-3</td>\n",
+       "      <td>NATURAL MICROSYSTEMS LATIN AMERICA S.A.,</td>\n",
+       "      <td>PERON TTE GRAL JUAN DOMINGO</td>\n",
+       "      <td>328</td>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>C1038AAH</td>\n",
+       "      <td>CIUDAD AUTONOMA BUENOS AIRES</td>\n",
+       "      <td>CAPITAL FEDERAL</td>\n",
+       "      <td>CIUDAD DE BUENOS AIRES</td>\n",
+       "      <td>COMERCIALIZACION</td>\n",
+       "      <td>Disposición 2105 GI/1998</td>\n",
+       "      <td>21/05/2001</td>\n",
+       "      <td>30-1314</td>\n",
+       "      <td>-0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Expediente           Documento  \\\n",
+       "0   EXPCNC E 4589/2001  CUIT 30-69799813-2   \n",
+       "1   EXPCNC E 9484/2000  CUIT 30-61593482-4   \n",
+       "2  EXPCNC E 15687/1998  CUIT 30-69330140-4   \n",
+       "3   EXPCNC E 9369/1999  CUIT 30-70052972-6   \n",
+       "4   EXPCNC E 4684/1998  CUIT 30-68831569-3   \n",
+       "\n",
+       "                                Solicitante                        Calle  \\\n",
+       "0                     ASAHI ARGENTINA S.A.,                   TALCAHUANO   \n",
+       "1         IGT GLOBAL SOLUTIONS CORPORATION,                AVDA. CABILDO   \n",
+       "2                             OMNISAT S.A.,                       BRASIL   \n",
+       "3                            UBICAR S.R.L.,                INDEPENDENCIA   \n",
+       "4  NATURAL MICROSYSTEMS LATIN AMERICA S.A.,  PERON TTE GRAL JUAN DOMINGO   \n",
+       "\n",
+       "    Nro Piso Dpto       CPA                     Localidad          Partido  \\\n",
+       "0   750    8  NaN  C1013AAP        CIUDAD DE BUENOS AIRES              NaN   \n",
+       "1  4566   7°  NaN  C1429ABQ                          CABA             CABA   \n",
+       "2   731  NaN  NaN      1154        CIUDAD DE BUENOS AIRES             CABA   \n",
+       "3  3333  NaN  NaN      1225        CIUDAD DE BUENOS AIRES             CABA   \n",
+       "4   328    3  NaN  C1038AAH  CIUDAD AUTONOMA BUENOS AIRES  CAPITAL FEDERAL   \n",
+       "\n",
+       "                Provincia                      Tramite  \\\n",
+       "0         CAPITAL FEDERAL  RENOVACION COMERCIALIZACION   \n",
+       "1  CIUDAD DE BUENOS AIRES             COMERCIALIZACION   \n",
+       "2  CIUDAD DE BUENOS AIRES             COMERCIALIZACION   \n",
+       "3  CIUDAD DE BUENOS AIRES             COMERCIALIZACION   \n",
+       "4  CIUDAD DE BUENOS AIRES             COMERCIALIZACION   \n",
+       "\n",
+       "                   Actuacion F_Vencimiento  Reg_Com Reg_Fab  \n",
+       "0   Disposición 1781 GI/2008    23/05/2011  30-1398      -0  \n",
+       "1  Resolución 85 ENACOM/2016    22/02/2019  30-2153      -0  \n",
+       "2    Disposición 217 GI/1999    22/01/2002  30-1336      -0  \n",
+       "3   Disposición 3765 GI/1999    09/09/2002  30-1350      -0  \n",
+       "4   Disposición 2105 GI/1998    21/05/2001  30-1314      -0  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inter_mercado.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
